# minotaur

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: image-build-scan.yml  run-tests.yml
jobsy/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
jobsy/management/commands/: check_job_workflows.py
jobsy/migrations/: 0001_initial.py  0002_job_url.py
minotaur/: settings.py  urls.py  wsgi.py
