[tool.poetry]
name = "minotaur"
version = "0.1.0"
description = "Minotaur is a simple monitoring service. It's a play on words."
authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.15"
psycopg2-binary = "2.9.1"
django-extensions = "3.2.0"
django-dotenv = "1.4.2"
dbca-utils = "1.1.6"
dj-database-url = "0.5.0"
whitenoise = {version = "5.3.0", extras = ["brotli"]}
gunicorn = "20.1.0"
croniter = "1.3.5"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
