[tool.poetry]
name = "minotaur"
version = "0.9.1"
description = "Lightweight task monitoring/reporting service"
authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.18"
psycopg2 = "2.9.5"
django-extensions = "3.2.0"
django-dotenv = "1.4.2"
dbca-utils = "1.1.6"
dj-database-url = "0.5.0"
whitenoise = {version = "6.2.0", extras = ["brotli"]}
gunicorn = "20.1.0"
croniter = "1.3.5"
cron-descriptor = "1.2.31"

[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.core.masonry.api"
